.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3.6 - Unreleased
------------------

- Mostly manual merge of Changeset 47328
  On search form don't show list of users when anonymous
  unless explicitly allowed in @@security-controlpanel.
  Refs http://dev.plone.org/plone/changeset/47328
  Fixes http://dev.plone.org/plone/ticket/11346

- Sorry for the noise!
  Reverting http://dev.plone.org/plone/changeset/47113
  Refs http://dev.plone.org/plone/ticket/10305
  [msmith64]
   
- Point link objects immediately to their remote_url when visitor
  cannot edit, rather than relying on after-the-fact redirect.
  This enables external-links javascript to open
  a new window when appropriate.
  This fixes http://dev.plone.org/plone/ticket/10305
  [msmith64]

- Add some CSS hooks in login_form parallel to
  http://dev.plone.org/plone/changeset/46384
  This closes http://dev.plone.org/plone/ticket/9468
  [msmith64]

- (r47099 post-commit changelog entry) Remove js-generated inline style
  from searchbox. Same CSS is in public.css.
  See http://dev.plone.org/plone/changeset/40654
  Fixes http://dev.plone.org/plone/ticket/11186
  [msmith64]

- Make role/permission settings consistent in Plone root
  http://dev.plone.org/plone/ticket/7922
  [tom_gross]

- In the registration tool strip the mail text before passing it
  through message_from_string.  A leading white line would prevent
  getting Subject, To and From headers from the generated message.
  [maurits]

- Avoid conflict in selected tabs when the id of an excluded item starts with the
  same id of an existing tab.
  This closes http://dev.plone.org/plone/ticket/9944
  Refs http://dev.plone.org/plone/ticket/11140
  [WouterVH]

- Block picking a username already in use by a parent PAS to prevent potential
  security issues due to collisions.
  [MatthewWilkes]
