@@ -8,11 +8,15 @@ Changelog
 3.3.6 - Unreleased
 ------------------
 
+- Add missing security declarations on PropertiesTool.
+  [davisagli]
+
 - Mostly manual merge of Changeset 47328
   On search form don't show list of users when anonymous
   unless explicitly allowed in @@security-controlpanel.
   Refs http://dev.plone.org/plone/changeset/47328
   Fixes http://dev.plone.org/plone/ticket/11346
+  [msmith64]
 
 - Sorry for the noise!
   Reverting http://dev.plone.org/plone/changeset/47113
